# simple-evals

./: .env.example  .gitignore  Makefile  README.md  browsecomp_eval.py  common.py  drop_eval.py  gpqa_eval.py  healthbench_eval.py  healthbench_meta_eval.py  humaneval_eval.py  math_eval.py  mgsm_eval.py  mmlu_eval.py  package-lock.json  setup.py  simpleqa_eval.py
college_board_eval/: .flake8  .pre-commit-config.yaml  Makefile  README.md  __init__.py  ap_types.py  config.json  config.py  evaluator.py  evaluator_short_answer_question.py  exam_loader.py  example.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
college_board_eval/examextractor/: README.md
college_board_eval/exams/: exam-types.json
college_board_eval/exams/AP_BIOLOGY_2008/: AP_BIOLOGY_2008.json
college_board_eval/exams/AP_CALCULUS_BC_2012/: AP_CALCULUS_BC_2012.json
college_board_eval/exams/AP_US_HISTORY_2017/: AP_US_HISTORY_2017.json
college_board_eval/results/: AP_BIOLOGY_2008_openai_gpt-4o-mini_20250630_123010.json  AP_BIOLOGY_2008_openai_gpt-4o_20250701_151534.json  AP_CALCULUS_BC_2012_anthropic_claude-3-haiku-20240307_20250707_132143.json  AP_CALCULUS_BC_2012_anthropic_claude-3-haiku-20240307_20250707_142753.json  AP_CALCULUS_BC_2012_openai_gpt-4_20250707_131547.json  AP_US_HISTORY_2017_anthropic_claude-3-7-sonnet-latest_20250702_143835.json  AP_US_HISTORY_2017_anthropic_claude-3-haiku-20240307_20250630_111940.json  AP_US_HISTORY_2017_anthropic_claude-sonnet-4-20250514_20250630_112053.json  AP_US_HISTORY_2017_google_gemini-2.0-flash_20250702_140546.json  AP_US_HISTORY_2017_openai_gpt-3.5-turbo_20250707_121136.json  AP_US_HISTORY_2017_openai_gpt-4.1_20250630_112756.json  AP_US_HISTORY_2017_openai_gpt-4o-mini_20250630_091909.json  AP_US_HISTORY_2017_openai_gpt-4o-mini_20250630_110304.json  AP_US_HISTORY_2017_openai_gpt-4o-mini_20250630_110753.json  AP_US_HISTORY_2017_openai_gpt-4o_20250707_111618.json  index.json
college_board_eval/results/collator/: README.md  run.py
college_board_eval/scorer/: scorer_base.py  scorer_free_response.py  scorer_long_answer.py  scorer_multiple_choice.py  scorer_registry.py  scorer_short_answer.py  scorer_student_produced_response.py
college_board_eval/tests/: __init__.py  test_backend.py  test_evaluator.py  test_exam_loader.py  test_run_py.py  test_scorer_base.py  test_scorer_short_answer.py  test_scorers.py  test_short_answer_question.py
college_board_eval/web/: __init__.py
college_board_eval/web/backend/: README.md  __init__.py  image_processor.py  main.py
college_board_eval/web/backend/api/: __init__.py
college_board_eval/web/backend/api/v1/: __init__.py  exams.py  health.py  results.py  uploads.py
college_board_eval/web/backend/core/: __init__.py  config.py
college_board_eval/web/backend/services/: __init__.py  image_processor.py
college_board_eval/web/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
college_board_eval/web/frontend/public/: results
college_board_eval/web/frontend/public/QuestionType/: FREE_RESPONSE.schema.json  LONG_ANSWER.schema.json  LONG_ESSAY.schema.json  MULTIPLE_CHOICE.schema.json  SHORT_ANSWER_QUESTION.schema.json  STUDENT_PRODUCED_RESPONSE.schema.json  index.json
college_board_eval/web/frontend/source/: App.tsx  README.md  main.tsx
college_board_eval/web/frontend/source/components/: Layout.tsx
college_board_eval/web/frontend/source/services/: api.ts
(+72 files in other folders)
