[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["college_board_eval"]
known_third_party = ["sampler"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = ["__init__.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = false
strict_equality = false
show_error_codes = true

# Ignore specific error codes that are too strict for current codebase
disable_error_code = [
    "override",  # Liskov substitution principle violations
    "attr-defined",  # Missing attributes on base classes
    "var-annotated",  # Missing variable type annotations
    "unreachable",  # Unreachable code
    "dict-item",  # Dict type mismatches
    "list-item",  # List type mismatches
    "arg-type",  # Argument type mismatches (for external APIs)
    "union-attr",  # Union attribute access issues
    "return-value",  # Return type variance issues
]

# Ignore missing imports for external libraries
[[tool.mypy.overrides]]
module = "sampler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "anthropic"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "google.generativeai"
ignore_missing_imports = true

# Ignore specific error types that are too strict for gradual adoption
[[tool.mypy.overrides]]
module = "college_board_eval.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
warn_return_any = false
warn_no_return = false
warn_unreachable = false

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".eggs",
    "*.egg",
    "results",
    "exams"
]
per-file-ignores = [
    "__init__.py:F401"
] 

[project]
name = "college-board-eval"
version = "0.1.0"
description = "College Board Evaluation System"
authors = [
    {name = "Thushan Amarasiriwardena",email = "thushan@thushan.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "python-multipart==0.0.20",
    "pdf2image==1.17.0",
    "Pillow==11.3.0",
    "pydantic==2.11.7",
    "requests==2.32.4",
    "openai==1.97.1",
    "anthropic==0.59.0",
    "pandas==2.3.1",
    "python-dotenv==1.1.1",
    "tqdm==4.67.1",
    "jsonschema==4.25.0",
    "jinja2",
    "google-generativeai (>=0.8.5,<0.9.0)"
]
package-mode = false 

[tool.poetry.group.dev.dependencies]
black = "25.1.0"
isort = "6.0.1"
flake8 = "7.3.0"
pre-commit = "4.2.0"
mypy = "1.17.0"
pytest = "8.4.1"
httpx = "0.28.1"
pytest-cov = "6.2.1"
jinja2 = "*"